--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -8,15 +8,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no" />
 
-    <!-- ↓ 半透明うっとおしい -->
-    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
-
-    <!-- 57x57 -->
-    <!-- <link rel="apple-touch-icon" href="images/icon.png" /> -->
+    <link rel="apple-touch-icon-precomposed" href="images/home-icon.png"/>
 
     <!-- 57x57 -->
     <!-- <link rel="apple-touch-startup-image" href="images/icon.png" /> -->
-
 
     <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
