テスト用 あとでrevertする

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -45,6 +45,17 @@
           <img src="images/help-button.png" title="ヘルプ"/>
         </a>
       </div>
+      <div id="test">
+        <label>
+          最低
+          <input type="number" id="test-min" min="-10" max="40" value="18" />
+        </label>
+        <br/>
+        <label>
+          最高
+          <input type="number" id="test-max" min="-10" max="40" value="23" />
+        </label>
+      </div>
 
       <div class="page" id="main-page">
 
