--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -42,7 +42,7 @@
           <img src="images/back-button.png" title="戻る"/>
         </a>
         <a href="#help" id="help-button">
-          <img src="images/help-button.png" title="ヘルプ"/>
+          <img src="images/help.png" title="ヘルプ"/>
         </a>
       </div>
       <div id="test">
@@ -120,7 +120,7 @@
           </div>
 
           <div id="share-tweet-container">
-            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet.png" title="重ね着をツイートする"></a>
+            <a target="_blank" id="share-tweet" href="https://twitter.com/share?url=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fbon%2F&text=3%E6%9E%9A%E3%81%A7%E3%81%99%20%23%E9%87%8D%E3%81%AD%E7%9D%80%20%23%E9%87%8D%E3%81%AD%E7%9D%80%E4%BA%AC%E9%83%BD"><img src="images/tweet-button.png" title="重ね着をツイートする"></a>
           </div>
 
           <div id="widget-container">
@@ -132,16 +132,25 @@
       </div> <!-- main page end -->
 
       <div class="page" id="help-page">
-        <div id="guide">
-          <p>
-            地域を選ぶと，天気にあった服装をおすすめします．
-            <br/>
-            重ね着をtwitterで共有することができます．
-          </p>
+        <div class="help-image-container">
+          <img class="help-image" src="images/help1.png"/>
+        </div>
+        <div class="help-image-container">
+          <img class="help-image" src="images/help2.png"/>
+        </div>
+        <div class="help-image-container">
+          <img class="help-image" src="images/help3.png"/>
+        </div>
 
-          <p>
-            重ね着では以下のAPIを利用しています．
-          </p>
+        <div class="help-image-container">
+          <a href="#main">
+            <img class="help-button-image" src="images/help-button.png"/>
+          </a>
+        </div>
+
+        <p class="api-message">
+          重ね着では以下のAPIを利用しています．
+        </p>
 
           <div class="apis">
             <div class="api">
