--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -9,9 +9,7 @@
     <meta name="format-detection" content="telephone=no" />
 
     <link rel="apple-touch-icon-precomposed" href="images/home-icon.png"/>
-
-    <!-- 57x57 -->
-    <!-- <link rel="apple-touch-startup-image" href="images/icon.png" /> -->
+    <link rel="apple-touch-startup-image" href="images/home-load.png" />
 
     <script language="javascript" type="text/javascript" defer src="js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="js/underscore-min.js"></script>
