--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -60,9 +60,12 @@
         <div id="city-selector-container">
         </div>
         <div id="first-time-guide">
-          <p>
-            天気にあわせた服装をおすすめします．
-          </p>
+          <div class="help-image-container">
+            <img class="help-image" src="images/help1.png"/>
+          </div>
+          <div class="more">
+            <a href="#help">もっと詳しく</a>
+          </div>
         </div>
         <div id="indicator">
           <div class="message">
@@ -150,30 +153,29 @@
           重ね着では以下のAPIを利用しています．
         </p>
 
-          <div class="apis">
-            <div class="api">
-              <a href="http://tenkiapi.jp/" class="tenki-logo">
-                <img src="images/tenki_logo.gif">
-                <br/>
-                WEB services by tenkiapi.jp
-              </a>
-            </div>
+        <div class="apis">
+          <div class="api">
+            <a href="http://tenkiapi.jp/" class="tenki-logo">
+              <img src="images/tenki_logo.gif">
+              <br/>
+              WEB services by tenkiapi.jp
+            </a>
+          </div>
 
-            <div class="api">
-              <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
-              <a href="http://developer.yahoo.co.jp/about">
-                <img src="http://i.yimg.jp/images/yjdn/yjdn_attbtn1_125_17.gif" title="Webサービス by Yahoo! JAPAN" alt="Web Services by Yahoo! JAPAN" width="125" height="17" border="0"></a>
-              <!-- End Yahoo! JAPAN Web Services Attribution Snippet -->
-            </div>
+          <div class="api">
+            <!-- Begin Yahoo! JAPAN Web Services Attribution Snippet -->
+            <a href="http://developer.yahoo.co.jp/about">
+              <img src="http://i.yimg.jp/images/yjdn/yjdn_attbtn1_125_17.gif" title="Webサービス by Yahoo! JAPAN" alt="Web Services by Yahoo! JAPAN" width="125" height="17" border="0"></a>
+            <!-- End Yahoo! JAPAN Web Services Attribution Snippet -->
+          </div>
 
-            <div class="api">
-              <a href="http://www.docodoco.jp/">
-                <img src="images/docodoco_logo.gif">
-              </a>
-            </div>
+          <div class="api">
+            <a href="http://www.docodoco.jp/">
+              <img src="images/docodoco_logo.gif">
+            </a>
           </div>
         </div>
-      </div> <!-- help page end -->
+      </div>
 
       <div id="copyright">
         Copyright (C) 2011 higashi dance network. All Rights Reserved.
