--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="kasanegi.manifest">
   <head>
     <meta charset="utf-8">
     <title>今日の重ね着。</title>
@@ -150,7 +150,7 @@
         </div>
 
         <p class="api-message">
-          重ね着では以下のAPIを利用しています．
+          今日の重ね着では、以下のAPIを利用しています。
         </p>
 
         <div class="apis">
