--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -2,7 +2,7 @@
 <html manifest="kasanegi.manifest">
   <head>
     <meta charset="utf-8">
-    <title>今日の重ね着。</title>
+    <title>今日の重ね着</title>
 
     <meta name="viewport" content="width=320px, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -33,7 +33,7 @@
       <div id="title-container">
         <div id="title">
           <a href="#main">
-            <img src="images/header.png" title="今日の重ね着。">
+            <img src="images/header.png" title="今日の重ね着">
           </a>
         </div>
         <a href="#main" id="back-to-main">
