--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,14 @@
-<html>
-    <body>
-      <a href="/bon/">bon</a>
-    </body>
+<!DOCTYPE html>
+<html manifest="kasanegi.manifest">
+  <head>
+    <meta charset="utf-8">
+    <title>東ダンスネットワーク</title>
+  </head>
+  <body>
+    <id id="wrapper">
+      <a href="#main">
+        <img src="images/header.png" title="東ダンスネットワーク">
+      </a>
+    </id> <!-- wrapper end -->
+  </body>
 </html>
