--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,61 @@
   <head>
     <meta charset="utf-8">
     <title>東ダンスネットワーク</title>
+    <!-- <meta name="viewport" content="width=320px, user-scalable=no"> -->
+    <link rel="stylesheet" type="text/css" href="top/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="top/css/text.css" />
+    <link rel="stylesheet" type="text/css" href="top/css/common.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="top/css/pc.css" media="only screen and (min-device-width: 481px)" > -->
+    <script language="javascript" type="text/javascript" defer src="top/js/jquery-1.6.1.min.js"></script>
+    <script language="javascript" type="text/javascript" defer src="top/js/top.js"></script>
+
   </head>
   <body>
-    <id id="wrapper">
-      <a href="#main">
-        <img src="images/header.png" title="東ダンスネットワーク">
-      </a>
-    </id> <!-- wrapper end -->
+    <div id="wrapper">
+      <div id="title">
+        <a href="/">
+          <img src="top/images/header.png" title="東ダンスネットワーク">
+        </a>
+      </div>
+
+      <div class="items">
+        <div class="item">
+          <div>
+            <a href="http://twitter.com/hitode909"><img src="/top/images/hitode909.gif" title="hitode909"/></a>
+          </div>
+          <div class="title">
+            hitode909
+          </div>
+        </div>
+        <div class="item">
+          <div>
+            <a href="http://twitter.com/swimy1113"><img src="/top/images/swimy1113.gif" title="swimy1113"/></a>
+          </div>
+          <div class="title">
+            swimy1113
+          </div>
+        </div>
+
+        <div class="item">
+          <div>
+            <a href="/bon/"><img src="/bon/images/back_image.png" title="盆"/></a>
+          </div>
+          <div class="title">
+            盆
+          </div>
+        </div>
+
+        <div class="item">
+          <div>
+            <a href="/kasanegi/"><img src="/kasanegi/images/home-icon.png" title="今日の重ね着"/></a>
+          </div>
+          <div class="title">
+            今日の重ね着
+          </div>
+        </div>
+
+      </div> <!-- items end -->
+
+    </div> <!-- wrapper end -->
   </body>
 </html>
