--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,12 @@
     <!-- <link rel="stylesheet" type="text/css" href="top/css/pc.css" media="only screen and (min-device-width: 481px)" > -->
     <script language="javascript" type="text/javascript" defer src="top/js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="top/js/top.js"></script>
+    <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
 
   </head>
   <body>
     <div id="wrapper">
-      <div id="title">
-        <a href="/">
-          <img src="top/images/header.png" title="東ダンスネットワーク">
-        </a>
-      </div>
+      <h1>東ダンスネットワーク</h1>
 
       <div class="items">
         <div class="item">
