--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="bon.manifest">
+<html manifest="/bon/bon.manifest">
   <head>
     <meta charset="utf-8">
     <title>bon</title>
