--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="kasanegi.manifest">
+<html manifest="/kasanegi/kasanegi.manifest">
   <head>
     <meta charset="utf-8">
     <title>今日の重ね着</title>
@@ -26,6 +26,8 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
+
+    <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。witter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
   </head>
   <body>
     <div id="wrapper">
@@ -175,6 +177,14 @@
           <div>
             <a href="http://twitter.com/swimy1113"><img src="images/swimy1113.png">swimy1113</a>
           </div>
+        </div>
+
+        <p class="api-message">
+          今日の重ね着は、<br>Mashup Awards 7 に応募しています。
+        </p>
+
+        <div class="ma7-container center">
+          <a href="http://ma7.mashupaward.jp/"><img src="images/ma7-logo.gif"></a>
         </div>
 
       </div>
