トップリニューアル

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,40 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>東ダンスネットワーク</h1>
 
       <div class="items">
-        <div class="item">
+        <div class="item title" style="left: 100px; top: 100px;">
+          東
+        </div>
+        <div class="item title" style="left: 180px; top: 100px;">
+          ダ
+        </div>
+        <div class="item title" style="left: 260px; top: 100px;">
+          ン
+        </div>
+        <div class="item title" style="left: 340px; top: 100px;">
+          ス
+        </div>
+        <div class="item title" style="left: 420px; top: 100px;">
+          ネ
+        </div>
+        <div class="item title" style="left: 500px; top: 100px;">
+          ッ
+        </div>
+        <div class="item title" style="left: 580px; top: 100px;">
+          ト
+        </div>
+        <div class="item title" style="left: 660px; top: 100px;">
+          ワ
+        </div>
+        <div class="item title" style="left: 740px; top: 100px;">
+          ー
+        </div>
+        <div class="item title" style="left: 820px; top: 100px;">
+          ク
+        </div>
+
+        <div class="item" style="left: 100px; top: 300px;">
           <div>
             <a href="http://twitter.com/hitode909"><img src="/top/images/hitode909.gif" title="hitode909"/></a>
           </div>
@@ -26,7 +56,7 @@
             hitode909
           </div>
         </div>
-        <div class="item">
+        <div class="item" style="left: 300px; top: 300px;">
           <div>
             <a href="http://twitter.com/swimy1113"><img src="/top/images/swimy1113.gif" title="swimy1113"/></a>
           </div>
@@ -35,7 +65,7 @@
           </div>
         </div>
 
-        <div class="item">
+        <div class="item" style="left: 100px; top: 500px;">
           <div>
             <a href="/bon/"><img src="/bon/images/back_image.png" title="盆"/></a>
           </div>
@@ -44,7 +74,7 @@
           </div>
         </div>
 
-        <div class="item">
+        <div class="item" style="left: 300px; top: 500px;">
           <div>
             <a href="/kasanegi/"><img src="/kasanegi/images/home-icon.png" title="今日の重ね着"/></a>
           </div>
