--- a/public/bon/index.html
+++ b/public/bon/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/text.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="shortcut icon" href="images/favicon.ico">
   </head>
   <body>
     <div id="stage">
