--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -27,7 +27,7 @@
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
 
-    <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。witter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
+    <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
   </head>
   <body>
     <div id="wrapper">
