facebook like 出してみる

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -30,6 +30,16 @@
     <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
   </head>
   <body>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {return;}
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
     <div id="wrapper">
       <div id="title-container">
         <div id="title">
@@ -187,6 +197,10 @@
           <a href="http://ma7.mashupaward.jp/"><img src="images/ma7-logo.gif"></a>
         </div>
 
+      </div>
+
+      <div class="fb-container">
+        <div class="fb-like" data-href="http://higashi-dance-network.appspot.com/kasanegi/" data-send="false" data-width="310" data-show-faces="true"></div>
       </div>
 
       <div id="copyright">
