--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="css/mobile.css" media="only screen and (max-device-width: 480px)" >
     <link rel="stylesheet" type="text/css" href="css/pc.css" media="only screen and (min-device-width: 481px)" >
     <link rel="shortcut icon" href="images/favicon.ico">
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/kasanegi/images/guide.png"/>
 
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
 
