カレンダー機能最低限

--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -77,6 +77,8 @@
           </div>
         </div>
         <div id="result">
+          <div id="calendar-container">
+          </div>
           <div id="weather-container">
             <div class="float" id="area-date-container">
               <div id="area"></div>
