--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -196,7 +196,7 @@
         </div>
 
         <p class="api-message">
-          今日の重ね着は、<br>Mashup Awards 7 に応募しています。
+          今日の重ね着は、Mashup Awards 7 で<br>日本気象協会・アップフロンティア賞と<br>サイバーエリアリサーチ賞を受賞しました。
         </p>
 
         <div class="ma7-container center">
@@ -210,7 +210,7 @@
       </div>
 
       <div id="copyright">
-        Copyright (C) 2011 higashi dance network. All Rights Reserved.
+        (C) 2012 東ダンスネットワーク
       </div>
 
     </div>
