--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="/kasanegi/kasanegi.manifest">
   <head>
     <meta charset="utf-8">
     <title>今日の重ね着</title>
