--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -203,6 +203,13 @@
           <a href="http://ma7.mashupaward.jp/"><img src="images/ma7-logo.gif"></a>
         </div>
 
+        <p class="api-message">
+          クラブTで今日の重ね着グッズを販売しています。
+          <br/>
+          <a href="http://clubt.jp/product/200108_14188464.html">Tシャツ</a>
+          <a href="http://clubt.jp/product/200108_14188465.html">マグカップ</a>
+        </p>
+
       </div>
 
       <div class="fb-container">
