--- a/public/color/index.html
+++ b/public/color/index.html
@@ -14,6 +14,10 @@
     </div>
     <div id="container">
       <div id="l-contents">
+        <form method="get" action=".">
+          <input class="url" name="url" required=""/>
+          <input type="submit" value="load"/>
+        </form>
         <div id="guide-or-main">
           <div id="guide">
             <div id="guide-image">
