--- a/public/color/index.html
+++ b/public/color/index.html
@@ -14,9 +14,10 @@
     </div>
     <div id="container">
       <div id="l-contents">
+<div class="service-description">お手元の画像やインターネット上の画像から色を拾ってカラーコードを検出します。</div>
         <form method="get" action=".">
-          <input class="url" name="url" required=""/>
-          <input type="submit" value="load"/>
+          <input class="url" name="url" required="" placeholder="画像URLを入力.."/>
+          <input type="submit" value="読み込み" class="load"/>
         </form>
         <div id="guide-or-main">
           <div id="guide">
