--- a/public/color/index.html
+++ b/public/color/index.html
@@ -56,7 +56,7 @@
           <li></li>
           <li></li>
       </ul>
-      <div id="footer">(C) 2012 東ダンスネットワーク </div>
+      <div id="footer">(C) 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
     </div>
   </body>
