--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,17 @@
     <!-- <link rel="stylesheet" type="text/css" href="top/css/pc.css" media="only screen and (min-device-width: 481px)" > -->
     <script language="javascript" type="text/javascript" defer src="top/js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="top/js/top.js"></script>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
 
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="wrapper">
