--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -12,6 +12,17 @@
     <meta property="og:title" content="今日の重ね着"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/kasanegi/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/kasanegi/images/guide.png"/>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="header">
@@ -65,11 +76,37 @@
         <div id="delete-all-button">すべて消去</div>
       </div>
       <ul id="ad">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <div class="inner">
+              <!-- 色彩力 -->
+<a href="http://www.amazon.co.jp/gp/product/4894445344/ref=as_li_ss_il?ie=UTF8&tag=hitode909-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4894445344"><img border="0" src="http://ws.assoc-amazon.jp/widgets/q?_encoding=UTF8&Format=_SL160_&ASIN=4894445344&MarketPlace=JP&ID=AsinImage&WS=1&tag=hitode909-22&ServiceVersion=20070822" ></a><img src="http://www.assoc-amazon.jp/e/ir?t=hitode909-22&l=as2&o=9&a=4894445344" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+            </div>
+          </li>
+          <li>
+            <div class="inner">
+              <!-- HTML5 -->
+              <a href="http://www.amazon.co.jp/gp/product/4897978939/ref=as_li_ss_il?ie=UTF8&tag=hitode909-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4897978939"><img border="0" src="http://ws.assoc-amazon.jp/widgets/q?_encoding=UTF8&Format=_SL160_&ASIN=4897978939&MarketPlace=JP&ID=AsinImage&WS=1&tag=hitode909-22&ServiceVersion=20070822" ></a><img src="http://www.assoc-amazon.jp/e/ir?t=hitode909-22&l=as2&o=9&a=4897978939" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+            </div>
+          </li>
+          <li>
+            <div class="inner">
+              <!-- CSS3 -->
+              <a href="http://www.amazon.co.jp/gp/product/4839938296/ref=as_li_ss_il?ie=UTF8&tag=hitode909-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4839938296"><img border="0" src="http://ws.assoc-amazon.jp/widgets/q?_encoding=UTF8&Format=_SL160_&ASIN=4839938296&MarketPlace=JP&ID=AsinImage&WS=1&tag=hitode909-22&ServiceVersion=20070822" ></a><img src="http://www.assoc-amazon.jp/e/ir?t=hitode909-22&l=as2&o=9&a=4839938296" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+            </div>
+          </li>
+          <li>
+            <div class="inner">
+              <!-- About Face -->
+              <a href="http://www.amazon.co.jp/gp/product/4048672452/ref=as_li_ss_il?ie=UTF8&tag=hitode909-22&linkCode=as2&camp=247&creative=7399&creativeASIN=4048672452"><img border="0" src="http://ws.assoc-amazon.jp/widgets/q?_encoding=UTF8&Format=_SL160_&ASIN=4048672452&MarketPlace=JP&ID=AsinImage&WS=1&tag=hitode909-22&ServiceVersion=20070822" ></a><img src="http://www.assoc-amazon.jp/e/ir?t=hitode909-22&l=as2&o=9&a=4048672452" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+            </div>
+          </li>
+          <li>
+            <div class="inner">
+              <a href="http://clubt.jp/product/177877_11511408.html">
+                <img src="http://static.clubt.jp/image/product/S0000041078/11511408_m.jpg"/>
+              </a>
+            </div>
+          </li>
       </ul>
       <div id="footer">(C) 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
