--- a/public/kasanegi/index.html
+++ b/public/kasanegi/index.html
@@ -32,6 +32,17 @@
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/kasanegi/" />
 
     <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-30891681-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
 
