--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -7,11 +7,11 @@
     <script src="sort_color.js"></script>
     <link rel="stylesheet" type="text/css" href="sort_color.css" />
     <title>iromiru - 画像からカラーコード抽出便利サービス</title>
-    <meta name="description" content="今日の重ね着は、一日の最高気温と最低気温から、その日の快適な服装の重ね着枚数を、イラストでわかりやすくオススメしてくれるアプリです。twitter連携機能によって有益な情報を共有したり、アプリを使っている人が、どれくらいの重ね着をしたのかがわかります。">
+    <meta name="description" content="iromiruは，お手元やインターネットの画像からカラーコードを集められるウェブサービスです．">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta property="og:title" content="今日の重ね着"/>
-    <meta property="og:url" content="http://higashi-dance-network.appspot.com/kasanegi/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/kasanegi/images/guide.png"/>
+    <meta property="og:title" content="iromiru"/>
+    <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/"/>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
