--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -7,7 +7,7 @@
     <script src="sort_color.js"></script>
     <link rel="stylesheet" type="text/css" href="sort_color.css" />
     <title>iromiru - 画像からカラーコード抽出便利サービス</title>
-    <meta name="description" content="iromiruは，お手元やインターネットの画像からカラーコードを集められるウェブサービスです．">
+    <meta name="description" content="iromiru (イロミル) は、お手元の画像や画像のURLから、カラーコードを集められるウェブサービスです。">
     <link rel="shortcut icon" href="favicon.ico">
     <meta property="og:title" content="iromiru"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
@@ -40,13 +40,15 @@
     </div>
     <div id="container">
       <div id="l-contents">
-        <div class="service-description">お手元やインターネットの画像から，色を選んでカラーコードを抽出します。</div>
+        <div class="service-description">お手元の画像や画像のURLから、カラーコードを集められます。</div>
         <form method="get" action=".">
           <input class="url" name="url" required="" placeholder="画像URLを入力.."/>
           <input type="submit" value="読み込み" class="load"/>
         </form>
         <div id="guide-or-main">
           <div id="guide">
+            <div id="guide-image">
+            </div>
           </div>
           <div id="main">
             <div id="image-container">
