--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="top/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="top/css/text.css" />
     <link rel="stylesheet" type="text/css" href="top/css/common.css" />
+    <meta name="description" content="東ダンスネットワーク">
     <!-- <link rel="stylesheet" type="text/css" href="top/css/pc.css" media="only screen and (min-device-width: 481px)" > -->
     <script language="javascript" type="text/javascript" defer src="top/js/jquery-1.6.1.min.js"></script>
     <script language="javascript" type="text/javascript" defer src="top/js/top.js"></script>
@@ -89,6 +90,14 @@
           </div>
           <div class="title">
             今日の重ね着
+          </div>
+        </div>
+        <div class="item" style="left: 500px; top: 500px;">
+          <div>
+            <a href="/kasanegi/"><img src="/iromiru/thumbnail.png" title="iromiru"/></a>
+          </div>
+          <div class="title">
+            iromiru
           </div>
         </div>
 
