--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
         </div>
         <div class="item" style="left: 500px; top: 500px;">
           <div>
-            <a href="/kasanegi/"><img src="/iromiru/thumbnail.png" title="iromiru"/></a>
+            <a href="/iromiru/"><img src="/iromiru/thumbnail.png" title="iromiru"/></a>
           </div>
           <div class="title">
             iromiru
