--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <meta property="og:title" content="iromiru"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
-    <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/"/>
+    <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
