--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -9,7 +9,7 @@
     <title>iromiru - 画像からカラーコード抽出便利サービス</title>
     <meta name="description" content="iromiru (イロミル) は、お手元の画像や画像のURLから、カラーコードを集められるウェブサービスです。">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta property="og:title" content="iromiru"/>
+    <meta property="og:title" content="iromiru - 画像からカラーコード抽出便利サービス"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
     <script type="text/javascript">
@@ -102,8 +102,8 @@
           </li>
           <li>
             <div class="inner">
-              <a href="http://clubt.jp/product/177877_11511408.html">
-                <img src="http://static.clubt.jp/image/product/S0000041078/11511408_m.jpg"/>
+              <a href="http://clubt.jp/product/209595_15231769.html" title="iromiruTシャツ">
+                <img src="tshirts.jpg"/>
               </a>
             </div>
           </li>
