--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -111,5 +111,9 @@
       <div id="footer">(C) 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
     </div>
+<div class="hidden">
+  <img src="main-image.png"/>
+  <img src="main-image-hover.png"/>
+</div>
   </body>
 </html>
