--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -47,7 +47,7 @@
         </form>
         <div id="guide-or-main">
           <div id="guide">
-            <div id="guide-image">
+            <div id="guide-image" title="画像ファイルをドラッグ &amp; ドロップで読み込みます">
             </div>
           </div>
           <div id="main">
