--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="iromiru - 画像からカラーコード抽出便利サービス"/>
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/iromiru/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
+    <link rel="canonical" href="http://higashi-dance-network.appspot.com/iromiru/" />
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
