--- a/public/iromiru/index.html
+++ b/public/iromiru/index.html
@@ -67,7 +67,7 @@
         <script id="picked-color-template" type="text/x-underscore-template">
           <div class="picked-color-item">
             <span class="color-sample" style="background-color: <%= color %>;"></span>
-            <input type="text" readonly="readonly" value="<%= color %>" class="color-code">
+            <input type="text" readonly="readonly" value="<%= color_text %>" class="color-code">
             <img class="delete-button" src="delete.png" title="削除">
           </div>
         </script>
