save uchiage to db

--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-page-id="uchiage">
   <head>
     <meta charset="utf-8">
     <script src="/hanabi/underscore-min.js"></script>
@@ -37,9 +37,9 @@
       <div id="body">
       </div>
       <h2>打ち上げ</h2>
-      <form id="uchiage" action="/hanabi/uchiage/">
+      <form id="create-uchiage" action="/hanabi/uchiage/">
         <textarea name="body" cols="80" rows="4" placeholder="今夜の思いを入力" required></textarea>
-        <input type="submit" value="打ち上げ"/>
+        <input class="submit" type="submit" value="打ち上げ"/>
       </form>
     </div>
   </body>
