--- a/public/hanabi/index.html
+++ b/public/hanabi/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html data-page-id="hanabi">
   <head>
     <meta charset="utf-8">
     <script src="underscore-min.js"></script>
     <script src="jquery-1.7.1.min.js"></script>
-    <script src="sort_color.js"></script>
+    <script src="/hanabi/hanabi.js"></script>
     <link rel="stylesheet" type="text/css" href="sort_color.css" />
     <title>今夜も打ち上げナイト</title>
     <meta name="description" content="あああああああああああああああああ">
@@ -32,9 +32,9 @@
         真夏の夜は打ち上げナイト!!!今日の思いを打ち上げ花火ナイト!!!!!!
       </p>
       <h2>打ち上げ</h2>
-      <form id="utiage" action="/hanabi/uchiage/">
+      <form id="create-uchiage" action="/hanabi/uchiage/">
         <textarea name="body" cols="80" rows="4" placeholder="今夜の思いを入力" required></textarea>
-        <input type="submit" value="打ち上げ"/>
+        <input class="submit" type="submit" value="打ち上げ"/>
       </form>
     </div>
   </body>
