--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -41,6 +41,7 @@
         <textarea name="body" cols="80" rows="4" placeholder="今夜の思いを入力" required></textarea>
         <input class="submit" type="submit" value="打ち上げ"/>
       </form>
+      <a id="uchiage-tweet">打ち上げをツイートする</a>
     </div>
   </body>
 </html>
