--- a/public/hanabi/index.html
+++ b/public/hanabi/index.html
@@ -2,11 +2,13 @@
 <html data-page-id="hanabi">
   <head>
     <meta charset="utf-8">
-    <script src="underscore-min.js"></script>
-    <script src="jquery-1.7.1.min.js"></script>
+    <script src="/hanabi/underscore-min.js"></script>
+    <script src="/hanabi/jquery-1.7.1.min.js"></script>
+    <script src="/hanabi/swfobject.js"></script>
     <script src="/hanabi/hanabi.js"></script>
-    <link rel="stylesheet" type="text/css" href="sort_color.css" />
+    <link rel="stylesheet" type="text/css" href="/hanabi/hanabi.css" />
     <title>今夜も打ち上げナイト</title>
+    <!-- TODO: ↓ metaタグいろいろ -->
     <meta name="description" content="あああああああああああああああああ">
     <link rel="shortcut icon" href="favicon.ico">
     <meta property="og:title" content="あああああああああああああああ"/>
@@ -27,15 +29,65 @@
   </head>
   <body>
     <div id="container">
-      <h1><a href="/hanabi/">今夜も打ち上げナイト</a></h1>
+      <div id="service-header">
+        <h1><a href="/hanabi/">今夜も打ち上げナイト</a></h1>
+        <span class="buttons">
+          <!-- TODO: ↓ タイトルいれるとか -->
+          <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fhigashi-dance-network.appspot.com%2Fkasanegi%2F&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
+
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://higashi-dance-network.appspot.com/kasanegi/" data-text="iromiru - 画像からカラーコード抽出便利サービス" data-lang="ja">ツイート</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+          <a href="http://b.hatena.ne.jp/entry/http://higashi-dance-network.appspot.com/kasanegi/" class="hatena-bookmark-button" data-hatena-bookmark-title="iromiru - 画像からカラーコード抽出便利サービス" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+        </span>
+      </div>
       <p>
         真夏の夜は打ち上げナイト!!!今日の思いを打ち上げ花火ナイト!!!!!!
+        <br/>
+        一日の終わりにインターネットに打ち上げ花火を上げられます．
+        <br/>
+        今日あったいいことやがんばったできこごとを打ち上げましょう．
+        <br/>
+        (みたいあことを書く)
       </p>
       <h2>打ち上げ</h2>
       <form id="create-uchiage" action="/hanabi/uchiage/">
         <textarea name="body" cols="80" rows="4" placeholder="今夜の思いを入力" required></textarea>
         <input class="submit" type="submit" value="打ち上げ"/>
       </form>
+      <div class="recent-tweets">
+        <script charset="utf-8" src="http://widgets.twimg.com/j/2/widget.js"></script>
+        <script>
+        new TWTR.Widget({
+          version: 2,
+          type: 'search',
+          search: '#重ね着',
+          interval: 30000,
+          title: '',
+          subject: '最近の打ち上げ',
+          width: 'auto',
+          height: 400,
+          theme: {
+            shell: {
+              background: '#000000',
+              color: '#ffffff'
+            },
+            tweets: {
+              background: '#000000',
+              color: '#ffffff',
+              links: '#ffd56b'
+            }
+          },
+          features: {
+            scrollbar: false,
+            loop: false,
+            live: true,
+            behavior: 'all'
+          }
+        }).render().start();
+        </script>
+      </div>
+      <div id="service-footer">&copy; 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
   </body>
 </html>
