--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -14,6 +14,20 @@
     <meta property="og:url" content="http://higashi-dance-network.appspot.com/hanabi/"/>
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/iromiru/" />
+
+    <script type="text/javascript" src="http://s.hatena.ne.jp/js/HatenaStar.js"></script>
+    <script type="text/javascript">
+      Hatena.Star.SiteConfig = {
+        entryNodes: {
+          'div#container': {
+            uri: 'a.permalink',
+            title: 'span.title',
+            container: 'span#star-container'
+          }
+        }
+      };
+    </script>
+
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-30891681-1']);
@@ -37,9 +51,7 @@
         <span>
           <a id="uchiage-tweet" target="_blank" >打ち上げをツイートする</a>
         </span>
-        <span>
-          <a id="uchiage-tweet" target="_blank" ></a>
-        </span>
+        <span id="star-container"><span class="title" style="display:none;">打ち上げ</span><a href="http://www.hatena.ne.jp/" class="permalink"></a></span>
       </div>
       <div id="service-footer">(C) 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
