--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -15,6 +15,7 @@
     <meta property="og:image" content="http://higashi-dance-network.appspot.com/iromiru/thumbnail.png"/>
     <link rel="canonical" href="http://higashi-dance-network.appspot.com/iromiru/" />
 
+    <script language="javascript" type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script type="text/javascript" src="http://s.hatena.ne.jp/js/HatenaStar.js"></script>
     <script type="text/javascript">
       Hatena.Star.SiteConfig = {
@@ -48,8 +49,8 @@
         <span>
           <a href="/hanabi/" >今夜も打ち上げナイト</a>
         </span>
-        <span>
-          <a id="uchiage-tweet" target="_blank" >打ち上げをツイートする</a>
+        <span class="twitter-container">
+          <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="http://www.hatena.ne.jp">Tweet</a>
         </span>
         <span id="star-container"><span class="title" style="display:none;">打ち上げ</span><a href="http://www.hatena.ne.jp/" class="permalink"></a></span>
       </div>
