--- a/public/hanabi/index.html
+++ b/public/hanabi/index.html
@@ -44,8 +44,8 @@
       <div id="catch">
       </div>
       <form id="create-uchiage" action="/hanabi/uchiage/">
-        <textarea class="body" name="body" cols="30" rows="4" placeholder="今夜の思いを入力" required></textarea>
-        <input class="submit" type="submit" title="打ち合げる" />
+        <textarea class="body" name="body" placeholder="今夜の思いを入力!!!" required></textarea>
+        <input class="submit" type="submit" title="打ち合げる" value="" />
       </form>
 
       <div class="clear">
