--- a/public/hanabi/uchiage/index.html
+++ b/public/hanabi/uchiage/index.html
@@ -46,13 +46,16 @@
       <div id="uchiage-flash">
       </div>
       <div id="footer">
-        <span>
-          <a href="/hanabi/" >今夜も打ち上げナイト</a>
-        </span>
-        <span class="twitter-container">
-          <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="http://www.hatena.ne.jp">Tweet</a>
-        </span>
-        <span id="star-container"><span class="title" style="display:none;">打ち上げ</span><a href="http://www.hatena.ne.jp/" class="permalink"></a></span>
+        <div id="footer-buttons">
+          <span class="twitter-container">
+            <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-text="打ち上げました" data-hashtags="今夜も打ち上げナイト" data-url="http://www.hatena.ne.jp">Tweet</a>
+          </span>
+          <span id="star-container"><span class="title" style="display:none;">打ち上げ</span><a href="http://www.hatena.ne.jp/" class="permalink"></a></span>
+        </div>
+        <div id="footer-catch">
+          <a href="/hanabi/" ><img src="/hanabi/img/catch-hanabi.png"></a>
+        </div>
+      </div>
       </div>
       <div id="service-footer">(C) 2012 <a href="/">東ダンスネットワーク</a></div>
     </div>
